--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "antd": "^5.27.4",
     "axios": "^1.12.2",
     "dayjs": "^1.11.18",
+    "driver.js": "^1.3.6",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
